# ecdlp-cost-challenge

./: .gitignore  AMORTIZED.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  INDEX_CALCULUS.md  METER_VALIDATION.md  PREPROCESSING.md  README.md  REPR_TRACK.md  SCALING.md  amortized_validation.baseline.json  benchmark.json  benchmark.sh  index_calculus_probe.baseline.json  instance.public.json  preprocessing_validation.baseline.json  repr_scaling.baseline.json  repr_validation.baseline.json  results.tsv  scaling.baseline.json  score.json  setup.sh
.github/: CODEOWNERS
.github/workflows/: pages.yml  score.yml  validate.yml
first_blood/: README.md  instance_public_112.json  instance_public_128.json  instance_public_80.json  instance_public_88.json  instance_public_96.json  status.json  verify_first_blood.py
repr_track/: counted_curve.py  counted_field.py  instances.py  repr_meter.py  rho_control.py  solve_index_calculus.py  solve_pohlig_hellman.py  solve_preprocessing.py  solve_reference.py  validate_amortized.py  validate_index_calculus.py  validate_meter.py  validate_preprocessing.py  weak_instances.py
site/: CNAME  README.md  arena.json  build.py  index.html
src/: client.rs  curve.rs  field.rs  instance.rs  lib.rs  oracle.rs  rng.rs
src/solver/: mod.rs
submissions/: README.md  negation-map-full-memory-rho.md
submissions/first-blood-80/: WRITEUP.md  solution.json
submissions/first-blood-88/: WRITEUP.md  (+1 more)
tools/: beats_best.py  beats_curve.py  classify_research_submission.py  gen_instances.sage  scaling_battery.py  verify_instance.sage
tracks/: README.md
(+6 files in other folders)
